# Chat_qt

./: CMakeLists.txt  CMakeLists.txt.user.b3b39bb  CMakeLists.txt.user.b71f9cd  ChatToolBar.qml  ContactPage.qml  ConversationPage.qml  ItemContactList.qml  LoginPage.qml  LoginPage.qml.autosave  Main.qml  README.md  RegisterPage.qml  RegisterPage.qml.autosave  RoundButton.qml  TextButton.qml  contact.cpp  contact.h  dbmanager.cpp  dbmanager.h  main.cpp  message.cpp  message.h  register.cpp  register.h  sqlcontact.cpp  sqlcontact.h  sqlcontact.h.autosave  sqlcontactmodel.cpp  sqlcontactmodel.h  sqlconversationmodel.cpp  sqlconversationmodel.h  sqlmessage.cpp  sqlmessage.h  sqluser.cpp  sqluser.cpp.autosave  sqluser.h  ssh_key_git  ssh_key_git.pub  temp.txt  token.txt  (+2 more)
+Materials/: ChatToolBar.qml  RoundButton.qml
Chat_qt/: CMakeLists.txt  ContactPage.qml  ConversationPage.qml  Main.qml  main.cpp  sqlcontactmodel.h  sqlconversationmodel.cpp  sqlconversationmodel.h
build-Chat_qt-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  appChat_qt  appchat_qt_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Chat_qt-Desktop-Debug/.qt/: QtDeploySupport.cmake
build-Chat_qt-Desktop-Debug/.qt/deploy_qml_imports/: appChat_qt.cmake
build-Chat_qt-Desktop-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appChat_qt.cmake  Qt6_QmlPlugins_Imports_appChat_qt.rsp
build-Chat_qt-Desktop-Debug/.rcc/: appChat_qt_raw_qml_0.qrc  qmake_Chat_qt.qrc  qrc_appChat_qt_raw_qml_0.cpp  qrc_qmake_Chat_qt.cpp
build-Chat_qt-Desktop-Debug/.rcc/qmlcache/: appChat_qt_ContactPage_qml.cpp  appChat_qt_ConversationPage_qml.cpp  appChat_qt_Main_qml.cpp  appChat_qt_qml_loader_file_list.rsp  appChat_qt_qmlcache_loader.cpp
build-Chat_qt-Desktop-Debug/Chat_qt/: qmldir
build-Chat_qt-Desktop-Debug/appChat_qt_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-Chat_qt-Desktop-Debug/appChat_qt_autogen/4UGIYD6VGQ/: qrc_images.cpp
build-Chat_qt-Desktop-Debug/appChat_qt_autogen/EWIEGA46WW/: moc_sqlcontactmodel.cpp  moc_sqlcontactmodel.cpp.d  moc_sqlconversationmodel.cpp  moc_sqlconversationmodel.cpp.d  (+1 more)
build-Chat_qt-Desktop-Debug/meta_types/: appChat_qt_json_file_list.txt  appChat_qt_json_file_list.txt.timestamp
build-Chat_qt-Desktop-Debug/qmltypes/: appChat_qt_foreign_types.txt
build-Chat_qt-Desktop_Qt_6_5_0_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  appChat_qt  appchat_qt_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Chat_qt-Desktop_Qt_6_5_0_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
build-Chat_qt-Desktop_Qt_6_5_0_GCC_64bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appChat_qt.cmake  Qt6_QmlPlugins_Imports_appChat_qt.rsp
build-Chat_qt-Desktop_Qt_6_5_0_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-Chat_qt-Desktop_Qt_6_5_0_GCC_64bit-Debug/.rcc/: appChat_qt_raw_qml_0.qrc  qmake_Chat_qt.qrc  qrc_appChat_qt_raw_qml_0.cpp  qrc_qmake_Chat_qt.cpp
build-Chat_qt-Desktop_Qt_6_5_0_GCC_64bit-Debug/Chat_qt/: ContactPage.qml  Main.qml  appChat_qt_qml_module_dir_map.qrc
build-Chat_qt-Desktop_Qt_6_5_0_GCC_64bit-Debug/appChat_qt_autogen/: deps
build-Chat_qt-Desktop_Qt_6_5_0_GCC_64bit-Debug/meta_types/: appChat_qt_json_file_list.txt  appChat_qt_json_file_list.txt.timestamp  qt6appchat_qt_debug_metatypes.json
build-Chat_qt-Desktop_Qt_6_5_0_GCC_64bit-Debug/qmltypes/: appChat_qt_foreign_types.txt
images/: images.qrc
(+409 files in other folders)
